@@ -165,6 +165,8 @@ DECLARE_BUILTIN_FUNCTION(ExpFunction)
 DECLARE_BUILTIN_FUNCTION_R(LogFunction)
 DECLARE_BUILTIN_FUNCTION(LognFunction)
 
+DECLARE_BUILTIN_FUNCTION(LambertWFunction)
+
 DECLARE_BUILTIN_FUNCTION_R2(SinFunction)
 DECLARE_BUILTIN_FUNCTION_R2(CosFunction)
 DECLARE_BUILTIN_FUNCTION(TanFunction)
