@@ -1,3 +1,7 @@
+2007-04-18 Niklas Knutsson  <nq@altern.org>
+
+	* Implement the Lambert W function
+
 2007-04-17 Niklas Knutsson  <nq@altern.org>
 
 	* Avoid floating point underflow by, in approximate mode, 
